--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,38 @@ img {
     width: 50px;
     height: 50px;
 }
+div {
+    border: 10px solid black;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    align-items: baseline;
+    background-color: #1f2937;
+    
+}
+.leftie{
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+}
+.rightie{
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    gap: 10px;
+}
+a{
+    color: white;
+    text-decoration: none;
+}
+.leftie h1{
+    color: white;
+}
+header{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 5px solid black;
+}
